fix: fixes image alignment and other todos

--- a/src/App.css
+++ b/src/App.css
@@ -5,12 +5,6 @@
 .AppContainer {
   display: flex;
   flex-direction: column;
-  justify-content: center;
-}
-
-.AppHeader {
-  display: flex;
-  flex-direction: column;
 }
 
 .HomeLogoHeader {
@@ -67,10 +61,6 @@
   color: #FFFFFF;
 }
 
-/* , */
-/* .musicLink, */
-/* .companyLink, */
-/* .helloLink,  */
 .serviceLink {
   display: flex;
   flex-direction: column;
@@ -121,18 +111,6 @@
   justify-content: center;
   text-decoration: none;
   color: #000000;
-
-}
-
-.VideoHeader {
-  display: flex;
-  flex-direction: column;
-  justify-content: center;
-  text-align: center;
-  width: 100%;
-  height: 100vh;
-  position: relative;
-  overflow: hidden;
 }
 
 .lewineVideo {
@@ -153,7 +131,6 @@
   flex-direction: column;
   height: relative;
   width: 100%;
-  color: #000000;
   text-decoration: none;
 }
 
@@ -169,50 +146,74 @@
 
 .soundContainer .col2 {
   display: flex;
-  flex-direction: row;
-  align-items: center;
-  max-width: 100vw;
-  padding-left: 2.5vw;
-  padding-right: 2.5vw;
-}
-
-.soundVideoContainer {
-  display: flex;
+  display: -webkit-box;
+  display: -ms-flexbox;
+  flex-direction: column; 
+  flex-flow: row wrap; 
   flex-wrap: wrap;
-  width: 100%;
-  height: 100%;
-  /* padding-right: 1vw;
-  padding-left: 1vw; */
-  flex-direction : row;
-  justify-content : center;
-  align-items: center;
+  padding: 2.5vw;
+  -ms-flex-direction: column;
+  -ms-flex-wrap: wrap;
+  -webkit-flex-flow: row wrap; 
 }
 
-.soundPicBox {
+.soundProjectListContainer {
+  -webkit-box-flex: auto;
+  -ms-flex: auto;
+  flex: auto; 
+  width: 450px; 
+  margin: .5vw; 
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  height: 100%;
+}
+
+.soundProjectListContainerChampion {
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+  -ms-flex: auto;
+  -webkit-box-flex: auto;
+  flex: auto; 
+  margin: .5vw; 
+  width: 450px;
+}
+
+.soundProjectDescription {
   display: flex;
   flex-direction: column;
   justify-content: center;
-  align-items: center;
-  flex: 1;
-  min-width: 450px;
-  height: 42vmin;
-  padding-top: 1vh;
-  padding-bottom: 1vh;
+  /* height: 5vh; */
 }
 
-.videoDetailsContainer{
+.soundProject {
+  height: 100%;
   display: flex;
-  flex-direction: column;
-  align-items: flex-start;
-  width: 25vw;
-  height: auto;
+  align-items: center;
+  background-color: #000000;
 }
 
 .soundPic {
   display: flex;
-  flex-direction: column;
-  width: 100%;
-  height: 100%;
+  width: 100%; 
+  height: auto; 
+}
+
+.soundPicFirst {
+  width: 100%; 
+  height: auto; 
+}
+
+.soundPicLast {
+  width: 100%; 
+  height: auto; 
+}
+
+@media screen and (max-width: 500px) {
+  .soundProjectListContainer { margin: 0; }
+  .soundContainer .col2 { padding: 0; }
+  
 }
 
 .InstagramIconCC {
@@ -239,7 +240,7 @@
 /* font-size ------------------------------------- */
 .OtherLogoHeader,
 .HomeLogoHeader {
-  font-size: 2.4vmin;
+  font-size: 2.6vmin;
 }
 
 .NavBarHeader {
@@ -257,8 +258,10 @@
 
 .soundContainer .col2,
 .musicContainer .col2,
-.artContainer .col2 {
-  font-size: 1.8vmin;
+.artContainer .col2,
+.PrivacyPolicyText,
+.ImprintText {
+  font-size: 2vmin;
 }
 
 .helloContainer .col2 {
